# craft_demo

./: README.md
person_client/: pom.xml
person_client/src/main/java/com/ahmad/grpc/demo/: DemoApplication.java
person_client/src/main/java/com/ahmad/grpc/demo/controller/: PersonResource.java
person_client/src/main/java/com/ahmad/grpc/demo/dto/: PersonDto.java
person_client/src/main/java/com/ahmad/grpc/demo/entity/: Person.java
person_client/src/main/java/com/ahmad/grpc/demo/service/: PersonService.java  PersonServiceImpl.java
person_client/src/main/proto/: person.proto
person_client/src/test/java/com/ahmad/grpc/demo/: DemoApplicationTests.java
person_server/: CMakeLists.txt
person_server/proto/: person.proto
person_server/server/: person_server.cc
